--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+source bin/activate
 export FLASK_APP="run.py"
 export SECRET="some-very-long-string-of-random-characters-CHANGE-TO-YOUR-LIKING"
 export APP_SETTINGS="development"
