--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
 install:
   - pip install -r requirements.txt
 script:
-  - python test_healthchecker.py
+  - nosetests --with-coverage --cover-package=app
