--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ install:
   - pip install -r requirements.txt
 script:
   - nosetests --with-coverage --cover-package=app
+after_success:
+  - coveralls
